<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">


        <ImageView android:layout_width="250dp" android:layout_marginTop="16dp"
                   android:layout_gravity="center_horizontal" android:src="@drawable/img"
                   android:layout_height="250dp" android:layout_marginBottom="16dp"/>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="32dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        <TextView android:layout_width="match_parent"
                  android:textStyle="bold" android:gravity="center"
                  android:text="@string/person_verification"
                  android:textColor="@color/colorAccent"
                  android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btnSignUp"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textStyle="bold"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>